# rustamation

./: .env.example  .gitignore  Cargo.toml  README.md  bacon.toml  docker-compose.yaml
migrations/: 1_user.sql
src/: main.rs
src/application_server/: app_server.rs  config.rs  error.rs  mod.rs  result.rs
src/rest_api/: mod.rs
