[package]
name = "rustamation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.8.1"
axum-extra = "0.10.0"
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "time", "uuid"] }
uuid = { version = "1.12.1", features = ["serde"] }
dotenv = "0.15.0"
config = "0.15.7"
serde_derive = "1.0.217"
thiserror = "2.0.11"